@@ -1793,6 +1793,11 @@
     </string>
     <string name="cli_errorCreatingStats">Error while creating the stats file!</string>
 
+    <string name="cli_run_noClock">No running clock found in circuit!</string>
+    <string name="cli_errorRunningCircuit">Error running the circuit!</string>
+    <string name="cli_help_run">Runs a circuit headless.</string>
+    <string name="cli_help_run_dig">File name of the circuit.</string>
+
     <string name="menu_window">Windows</string>
     <string name="menu_about">About</string>
     <string name="menu_analyse">Analysis</string>
